--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PROJECT TITLE</title>
+    <title>Allure Salon & Spa</title>
     <link rel="stylesheet" href="/assets/dist/css/main.css" />
   </head>
   <body>
