--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
 
+
     <script src="/assets/dist/js/app.js" charset="utf-8"></script>
+    <script src="jquery.backstretch.min.js"></script>
   </body>
 </html>
