add content to homepage

--- a/index.html
+++ b/index.html
@@ -7,9 +7,54 @@
     <link rel="stylesheet" href="/assets/dist/css/main.css" />
   </head>
   <body>
+    <img src="dist/img/red-hair-bg.png" alt="hello gorgeous" title="hello gorgeous">
+    <nav>
+      <ul>
+        <li><a href="#">Salon Services</a></li>
+        <li><a href="#">Spa Services</a></li>
+        <li><img src="img/allure-main-logo.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></li>
+        <li><a href="#">Spa Packages</a></li>
+        <li><a href="#">Our Blog</a></li>
+      </ul>
+    </nav>
+    <h1>Hello <div class="special-heading">Gorgeous</div></h1>
+
+    <main>
+      <img src="img/flower-overlay.png" alt="flowers" title="flowers">
+      <h2>WELCOME</h2>
+      <div class="divider"></div>
+        <p>Allure Salon, ideally situated in Aurora, between Naperville and Oswego, has been serving the western suburbs of Chicago since 2006. We offer traditional services such as Threading and Henna/Mehndi application, as well as Waxing, Facials, and a broad range of Hair services. </p>
+        <p>For hair, we use Redken and Matrix products and also have Biolage and Schwarzkopf products for sale in the salon. Feel free to browse the site and become familiar with our various salon and spa services.</p>
+    </main>
+
+    <div class="card-wrapper">
+      <div class="card">
+        <div class="card-image">
+          <img src="img/threading-girl.jpg" alt="brow threading" title="brow threading">
+        </div>
+        <div class="card-content">
+          <h3 class="centered">What is Threading?</h3>
+          <div class="divider"></div>
+          <p>Threading is an ancient method of hair removal with origins in Arabia and South Asia. It is very delicate procedure, making it suitable for even the most sensitive skin. Threading is more effective and less painful than tweezing; hair re-growth becomes finer and sparser after regular treatments; and the top layers of skin are not peeled or traumatized in the process. Threading makes it easy to create a sharp and defined shape. Come in and try it today!</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-wrapper">
+      <div class="card">
+        <div class="card-image">
+          <img src="img/fun-pink-hair.jpg" alt="pink hair" title="pink hair">
+        </div>
+        <div class="card-content">
+          <h3 class="centered">BOOK your service TODAY!</h3>
+          <div class="divider"></div>
+          <p>For more details in regards to booking a spa party or packages or to schedule an appointment, please call at (630) 499-8260 or e-mail at <a href="mailto:info@AllureSalonInAurora.com">info@AllureSalonInAurora.com»</a></p>
+          <p class="centered">GIFT CERTIFICATES AVAILABLE IN STORE!</p>
+        </div>
+      </div>
+    </div>
 
 
     <script src="/assets/dist/js/app.js" charset="utf-8"></script>
-    <script src="jquery.backstretch.min.js"></script>
   </body>
 </html>
