add copywrite to homepage

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
       </div>
     </footer>
 
+    <p class="copywrite">ALLURE SALON & SPA &#169; 2017 | DESIGNED BY CAITLIN JOHNSON DESIGNS</p>
 
     <script src="/assets/dist/js/app.js" charset="utf-8"></script>
   </body>
