--- a/salon-services.html
+++ b/salon-services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Allure Salon & Spa - Spa Services</title>
+    <title>Allure Salon & Spa - Salon Services</title>
     <link rel="stylesheet" href="/assets/dist/css/main.css" />
   </head>
   <body>
