add content to spa services page

--- a/salon-services.html
+++ b/salon-services.html
@@ -86,7 +86,7 @@
       <button type="button" class="red-book-now">BOOK NOW</button>
     </div>
 
-    <footer class="sub-page-footer">
+    <footer class="sub-page-footer maroon-footer">
 
       <!-- LOCATION & HOURS -->
       <div class="grid">
