--- a/spa-services.html
+++ b/spa-services.html
@@ -28,14 +28,14 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <img src="assets/dist/img/salon-services-bg.jpg" alt="salon services" title="salon services">
+    <img src="assets/dist/img/spa-services-bg.jpeg" alt="spa services" title="spa services">
 
     <!-- NAVIGATION -->
     <nav>
-      <img src="assets/dist/img/allure-alt-logo-maroon.png" alt="Allure Salon & Spa" title="Allure Salon & Spa">
+      <img src="assets/dist/img/allure-alt-logo-pink.png" alt="Allure Salon & Spa" title="Allure Salon & Spa">
       <ul>
-        <li><a href="#" id="current-page">Salon Services</a></li>
-        <li><a href="#">Spa Services</a></li>
+        <li><a href="#">Salon Services</a></li>
+        <li><a href="#" id="current-page">Spa Services</a></li>
         <li><a href="#">Spa Packages</a></li>
         <li><a href="#">Our Blog</a></li>
       </ul>
@@ -50,43 +50,63 @@
 
     <!-- SALON SERVICES -->
     <div class="salon-services-wrapper">
-      <h1>SALON SERVICES</h1>
+      <h1>SPA SERVICES</h1>
       <div class="pink-divider"></div>
 
-      <h2>HAIRCUTS & STYLING</h2>
+      <h2>HAIR REMOVAL</h2>
       <ul>
-        <li>Women's Haircut -  $15 & Up</li>
-        <li>Men's Haircut -  $12</li>
-        <li>Kid's Haircut -  $8</li>
-        <li>Shampoo and Haircut -  $20 & Up</li>
-        <li>Shampoo, Cut and Style -  $40</li>
-        <li>Shampoo, Blow-Dry and Style -  $30</li>
-        <li>Scalp Massage -  $25</li>
-        <li>Scalp Massage w/ Shampoo -  $30</li>
-        <li>Formal Style -  $30 & Up</li>
+        <li>Eyebrow Threading -  $5</li>
+        <li>Eyebrow Waxing -  $6</li>
+        <li>Upper Lip -  $3</li>
+        <li>Chin -  $4 & Up</li>
+        <li>Sideburns -  $7</li>
+        <li>Forehead -  $4</li>
+        <li>Full Face -  $20</li>
+        <li>Under Arms -  $8</li>
+        <li>Half Arms -  $15</li>
+        <li>Full Arms -  $20</li>
+        <li>Half Legs -  $20</li>
+        <li>Full Legs -  $35</li>
+        <li>Bikini Line -  $15</li>
+        <li>Brazilian -  $40</li>
+        <li>Stomach -  $20</li>
+        <li>Full Back -  $25</li>
+        <li>Full Body & Bikini -  $140</li>
+        <li>Men's Chest -  $40</li>
+        <li>Men's Back & Shoulders -  $40</li>
       </ul>
 
-      <h2>COLOR</h2>
+      <h2>FACIALS</h2>
       <ul>
-        <li>Color Change -  $50 & Up</li>
-        <li>Full Hair Color -  $40 & Up</li>
-        <li>Color Touch-up -  $30</li>
-        <li>Henna Color -  $35</li>
-        <li>Partial Highlights -  $45 & Up</li>
-        <li>Full Highlights -  $75 & Up</li>
-        <li>Men's Color -  $25</li>
+        <li>Herbal Facial -  $30</li>
+        <li>Fruit Facial -  $30</li>
+        <li>Back Facial -  $50</li>
+        <li>Anti-Acne Facial -  $50</li>
+        <li>Anti-Aging -  $60</li>
+        <li>Vitamin C Facial -  $60</li>
+        <li>Four Layer Facial -  $60</li>
+        <li>Janssen Whitening Facial -  $60</li>
+        <li>Shahnaz Men's Facial -  $45</li>
+        <li>Shahnaz Gold -  $45</li>
+        <li>Shahnaz Neem -  $35</li>
+        <li>Shahnaz Diamond -  $50</li>
+        <li>Shahnaz Pearl -  $50</li>
       </ul>
 
-      <h2>TREATMENTS</h2>
+      <h2>ADDITIONAL SERVICES</h2>
       <ul>
-        <li>Permanent Straightening -  $80 & Up</li>
+        <li>Face Polish -  $10</li>
+        <li>30 Minute Massage -  $40 & Up</li>
+        <li>Henna Tattoos -  $5 & Up</li>
+        <li>Party Makeup & Formal Style -  $75</li>
+        <li>Ear or Nose Piercing -  $15</li>
       </ul>
 
       <!-- BOOK NOW BUTTON -->
       <button type="button" class="red-book-now">BOOK NOW</button>
     </div>
 
-    <footer class="sub-page-footer">
+    <footer class=" sub-page-footer pink-footer">
 
       <!-- LOCATION & HOURS -->
       <div class="grid">
