add spa services page with content

--- a/spa-packages.html
+++ b/spa-packages.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Allure Salon & Spa - Spa Services</title>
+    <title>Allure Salon & Spa - Spa Packages</title>
     <link rel="stylesheet" href="/assets/dist/css/main.css" />
   </head>
   <body>
@@ -28,15 +28,17 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <img src="assets/dist/img/spa-services-bg.jpeg" alt="spa services" title="spa services">
+    <img src="assets/dist/img/salon-decor.jpeg" alt="spa" title="spa">
+
+    <h1>SPA <span class="special-heading">Packages</span></h1>
 
     <!-- NAVIGATION -->
     <nav>
-      <img src="assets/dist/img/allure-alt-logo-pink.png" alt="Allure Salon & Spa" title="Allure Salon & Spa">
+      <img src="assets/dist/img/allure-alt-logo-red.png" alt="Allure Salon & Spa" title="Allure Salon & Spa">
       <ul>
         <li><a href="#">Salon Services</a></li>
-        <li><a href="#" id="current-page">Spa Services</a></li>
-        <li><a href="#">Spa Packages</a></li>
+        <li><a href="#">Spa Services</a></li>
+        <li><a href="#" id="current-page">Spa Packages</a></li>
         <li><a href="#">Our Blog</a></li>
       </ul>
     </nav>
@@ -48,65 +50,66 @@
       <svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg>
     </div>
 
-    <!-- SALON SERVICES -->
-    <div class="spa-services-wrapper">
-      <h1>SPA SERVICES</h1>
-      <div class="pink-divider"></div>
+    <main>
 
-      <h2>HAIR REMOVAL</h2>
-      <ul>
-        <li>Eyebrow Threading -  $5</li>
-        <li>Eyebrow Waxing -  $6</li>
-        <li>Upper Lip -  $3</li>
-        <li>Chin -  $4 & Up</li>
-        <li>Sideburns -  $7</li>
-        <li>Forehead -  $4</li>
-        <li>Full Face -  $20</li>
-        <li>Under Arms -  $8</li>
-        <li>Half Arms -  $15</li>
-        <li>Full Arms -  $20</li>
-        <li>Half Legs -  $20</li>
-        <li>Full Legs -  $35</li>
-        <li>Bikini Line -  $15</li>
-        <li>Brazilian -  $40</li>
-        <li>Stomach -  $20</li>
-        <li>Full Back -  $25</li>
-        <li>Full Body & Bikini -  $140</li>
-        <li>Men's Chest -  $40</li>
-        <li>Men's Back & Shoulders -  $40</li>
-      </ul>
+      <img src="assets/dist/img/flower-overlay.png" alt="flowers" title="flowers">
 
-      <h2>FACIALS</h2>
-      <ul>
-        <li>Herbal Facial -  $30</li>
-        <li>Fruit Facial -  $30</li>
-        <li>Back Facial -  $50</li>
-        <li>Anti-Acne Facial -  $50</li>
-        <li>Anti-Aging -  $60</li>
-        <li>Vitamin C Facial -  $60</li>
-        <li>Four Layer Facial -  $60</li>
-        <li>Janssen Whitening Facial -  $60</li>
-        <li>Shahnaz Men's Facial -  $45</li>
-        <li>Shahnaz Gold -  $45</li>
-        <li>Shahnaz Neem -  $35</li>
-        <li>Shahnaz Diamond -  $50</li>
-        <li>Shahnaz Pearl -  $50</li>
-      </ul>
+      <!-- BRIDAL PACKAGE -->
+      <div class="package-wrapper">
+        <div class="package">
+          <div class="package-image">
+            <img src="assets/dist/img/wedding-hair.jpg" alt="wedding hair" title="wedding hair">
+          </div>
+          <div class="package-content">
+            <h2>BRIDAL PACKAGE</h2>
+            <p class="cenetered">Toning, Full Face Wax/Thread, Facial, Makeup, Up-do,
+              Dupatta/Veil & Jewelry Setting.</p>
+            <p class="centered">$250</p>
+          </div>
+          <!-- BOOK NOW BUTTON -->
+          <button type="button" class="red-book-now">BOOK NOW</button>
+        </div>
+      </div>
 
-      <h2>ADDITIONAL SERVICES</h2>
-      <ul>
-        <li>Face Polish -  $10</li>
-        <li>30 Minute Massage -  $40 & Up</li>
-        <li>Henna Tattoos -  $5 & Up</li>
-        <li>Party Makeup & Formal Style -  $75</li>
-        <li>Ear or Nose Piercing -  $15</li>
-      </ul>
+      <!-- MEGA BRIDAL PACKAGE -->
+      <div class="package-wrapper">
+        <div class="package">
+          <div class="package-image">
+            <img src="assets/dist/img/mega-bridal.jpg" alt="wedding hair" title="wedding hair">
+          </div>
+          <div class="package-content">
+            <h2>MEGA BRIDAL PACKAGE</h2>
+            <p class="cenetered">Full Body Wax, Gold Facial, Full Face Wax/Thread,
+              Toning, Bridal Henna, Makeup, Up-do, Dupatta/Veil,
+              and Jewelry Setting.</p>
+            <p class="centered">$450</p>
+          </div>
+          <!-- BOOK NOW BUTTON -->
+          <button type="button" class="red-book-now">BOOK NOW</button>
+        </div>
+      </div>
 
-      <!-- BOOK NOW BUTTON -->
-      <button type="button" class="red-book-now">BOOK NOW</button>
-    </div>
+      <!--BRIDESMAID OR PROM PACKAGES -->
+      <div class="package-wrapper">
+        <div class="package">
+          <div class="package-image">
+            <img src="assets/dist/img/prom.jpeg" alt="prom hair" title="prom hair">
+          </div>
+          <div class="package-content">
+            <h2>BRIDESMAID OR PROM PACKAGES</h2>
+            <p class="cenetered">Please contact us at (630) 499-8260</p>
+          </div>
+          <!-- BOOK NOW BUTTON -->
+          <button type="button" class="red-book-now">BOOK NOW</button>
+        </div>
+      </div>
 
-    <footer class=" sub-page-footer pink-footer">
+      <p class="centered">We also provide certain in-home services, such as Henna, Makeup, and Formal Style for the bride or groups of more than 5.</p>
+      <h3>Check out OUR <span class="special"><a href="#" alt="link to blog">Blog</a></span></h3>
+      <p>to see examples of our previous up-do styles and makeup.</p>
+    </main>
+
+    <footer class=" sub-page-footer red-footer">
 
       <!-- LOCATION & HOURS -->
       <div class="grid">
