--- a/spa-packages.html
+++ b/spa-packages.html
@@ -34,7 +34,7 @@
 
     <!-- NAVIGATION -->
     <nav>
-      <img src="assets/dist/img/allure-alt-logo-red.png" alt="Allure Salon & Spa" title="Allure Salon & Spa">
+      <a href="#"><img src="assets/dist/img/allure-alt-logo-red.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a>
       <ul>
         <li><a href="#">Salon Services</a></li>
         <li><a href="#">Spa Services</a></li>
