--- a/spa-services.html
+++ b/spa-services.html
@@ -32,7 +32,7 @@
 
     <!-- NAVIGATION -->
     <nav>
-      <img src="assets/dist/img/allure-alt-logo-pink.png" alt="Allure Salon & Spa" title="Allure Salon & Spa">
+      <a href="#"><img src="assets/dist/img/allure-alt-logo-pink.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a>
       <ul>
         <li><a href="#">Salon Services</a></li>
         <li><a href="#" id="current-page">Spa Services</a></li>
