--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Allure Salon & Spa</title>
-    <link rel="stylesheet" href="/assets/src/css/main.css" />
+    <link rel="stylesheet" href="assets/dist/css/main.css" />
   </head>
   <body>
     <!-- ICOMOON HTML -->
@@ -28,7 +28,7 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <img src="assets/dist/img/red-hair-bg.png" alt="hello gorgeous" title="hello gorgeous">
+    <img class="background" src="assets/dist/img/red-hair-bg.png" alt="hello gorgeous" title="hello gorgeous">
 
     <!-- NAVIGATION -->
     <nav>
@@ -117,6 +117,6 @@
 
     <p class="copywrite">ALLURE SALON & SPA &#169; 2017 | DESIGNED BY CAITLIN JOHNSON DESIGNS</p>
 
-    <script src="/assets/dist/js/app.js" charset="utf-8"></script>
+    <script src="assets/dist/js/app.js" charset="utf-8"></script>
   </body>
 </html>
