--- a/salon-services.html
+++ b/salon-services.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Allure Salon & Spa - Salon Services</title>
-    <link rel="stylesheet" href="/assets/dist/css/main.css" />
+    <link rel="stylesheet" href="assets/dist/css/main.css" />
   </head>
   <body>
     <!-- ICOMOON HTML -->
@@ -28,7 +28,7 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <img src="assets/dist/img/salon-services-bg.jpg" alt="salon services" title="salon services">
+    <img class="background" src="assets/dist/img/salon-services-bg.jpg" alt="salon services" title="salon services">
 
     <!-- NAVIGATION -->
     <nav>
@@ -106,6 +106,6 @@
     </footer>
 
 
-    <script src="/assets/dist/js/app.js" charset="utf-8"></script>
+    <script src="assets/dist/js/app.js" charset="utf-8"></script>
   </body>
 </html>
