--- a/spa-packages.html
+++ b/spa-packages.html
@@ -28,7 +28,7 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <img src="assets/dist/img/salon-decor.jpeg" alt="spa" title="spa">
+    <img class="background" src="assets/dist/img/salon-decor.jpeg" alt="spa" title="spa">
 
     <h1>SPA <span class="special-heading">Packages</span></h1>
 
