--- a/spa-services.html
+++ b/spa-services.html
@@ -28,7 +28,7 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <img src="assets/dist/img/spa-services-bg.jpeg" alt="spa services" title="spa services">
+    <img class="background" src="assets/dist/img/spa-services-bg.jpeg" alt="spa services" title="spa services">
 
     <!-- NAVIGATION -->
     <nav>
