--- a/spa-packages.html
+++ b/spa-packages.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Allure Salon & Spa - Spa Packages</title>
-    <link rel="stylesheet" href="/assets/dist/css/main.css" />
+    <link rel="stylesheet" href="assets/dist/css/main.css" />
   </head>
   <body>
     <!-- ICOMOON HTML -->
@@ -129,6 +129,6 @@
     </footer>
 
 
-    <script src="/assets/dist/js/app.js" charset="utf-8"></script>
+    <script src="assets/dist/js/app.js" charset="utf-8"></script>
   </body>
 </html>
