add backstretch.js to salon services

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <img class="background" src="assets/dist/img/red-hair-bg.png" alt="hello gorgeous" title="hello gorgeous">
+    <div class="background-wrapper">
+      <img class="background" src="assets/dist/img/red-hair-bg.png" alt="hello gorgeous" title="hello gorgeous">
+    </div>
 
     <!-- NAVIGATION -->
     <nav>
@@ -117,6 +119,6 @@
 
     <p class="copywrite">ALLURE SALON & SPA &#169; 2017 | DESIGNED BY CAITLIN JOHNSON DESIGNS</p>
 
-    <script src="assets/dist/js/app.js" charset="utf-8"></script>
+    <script src="assets/dist/js/production.js" charset="utf-8"></script>
   </body>
 </html>
