--- a/salon-services.html
+++ b/salon-services.html
@@ -28,7 +28,7 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <img class="background" src="assets/dist/img/salon-services-bg.jpg" alt="salon services" title="salon services">
+    <!--<img class="background" src="assets/dist/img/salon-services-bg.jpg" alt="salon services" title="salon services">-->
 
     <!-- NAVIGATION -->
     <nav>
@@ -106,6 +106,9 @@
     </footer>
 
 
-    <script src="assets/dist/js/app.js" charset="utf-8"></script>
+    <script src="assets/dist/js/production.js" charset="utf-8"></script>
+    <script>
+      $.backstretch("assets/dist/img/salon-services-bg.jpg");
+    </script>
   </body>
 </html>
