--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Allure Salon & Spa</title>
     <link rel="stylesheet" href="assets/dist/css/main.css" />
+    <script src="https://use.typekit.net/oxi0lak.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
   <body>
     <!-- ICOMOON HTML -->
@@ -42,7 +44,7 @@
         <li><a href="#">Our Blog</a></li>
       </ul>
     </nav>
-    <h1>Hello <span class="special-heading">Gorgeous</span></h1>
+    <h1 id="homepage-heading">Hello <span class="special-heading">Gorgeous</span></h1>
 
     <!-- WELCOME -->
     <main>
