styled "welcome" section on homepage

--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <div class="background-wrapper">
-      <img class="background" src="assets/dist/img/red-hair-bg.png" alt="hello gorgeous" title="hello gorgeous">
-    </div>
+    <img class="background" src="assets/dist/img/red-hair-bg.png" alt="hello gorgeous" title="hello gorgeous">
 
     <!-- NAVIGATION -->
-    <nav>
+    <nav class="home-nav">
       <ul>
         <li><a href="#">Salon Services</a></li>
         <li><a href="#">Spa Services</a></li>
@@ -48,11 +46,13 @@
 
     <!-- WELCOME -->
     <main>
-      <img src="assets/dist/img/flower-overlay.png" alt="flowers" title="flowers">
+      <!--<img class="overlay" src="assets/dist/img/flower-overlay.png" alt="flowers" title="flowers">-->
       <h2>WELCOME</h2>
       <div class="pink-divider"></div>
-        <p>Allure Salon, ideally situated in Aurora, between Naperville and Oswego, has been serving the western suburbs of Chicago since 2006. We offer traditional services such as Threading and Henna/Mehndi application, as well as Waxing, Facials, and a broad range of Hair services. </p>
-        <p>For hair, we use Redken and Matrix products and also have Biolage and Schwarzkopf products for sale in the salon. Feel free to browse the site and become familiar with our various salon and spa services.</p>
+      <div class="column-wrapper">
+        <p class="column">Allure Salon, ideally situated in Aurora, between Naperville and Oswego, has been serving the western suburbs of Chicago since 2006. We offer traditional services such as Threading and Henna/Mehndi application, as well as Waxing, Facials, and a broad range of Hair services. </p>
+        <p class="column">For hair, we use Redken and Matrix products and also have Biolage and Schwarzkopf products for sale in the salon. Feel free to browse the site and become familiar with our various salon and spa services.</p>
+      </div>
     </main>
 
     <!-- THREADING -->
