styled cards on homepage

--- a/index.html
+++ b/index.html
@@ -56,30 +56,30 @@
     </main>
 
     <!-- THREADING -->
-    <div class="card-wrapper">
+    <div class="card-wrapper threading">
       <div class="card">
         <div class="card-image">
           <img src="assets/dist/img/threading-girl.jpg" alt="brow threading" title="brow threading">
         </div>
         <div class="card-content">
           <h3 class="centered">What is Threading?</h3>
-          <div class="divider"></div>
+          <div class="pink-divider"></div>
           <p>Threading is an ancient method of hair removal with origins in Arabia and South Asia. It is very delicate procedure, making it suitable for even the most sensitive skin. Threading is more effective and less painful than tweezing; hair re-growth becomes finer and sparser after regular treatments; and the top layers of skin are not peeled or traumatized in the process. Threading makes it easy to create a sharp and defined shape. Come in and try it today!</p>
         </div>
       </div>
     </div>
 
     <!-- BOOK TODAY -->
-    <div class="card-wrapper">
+    <div class="card-wrapper booking">
       <div class="card">
-        <div class="card-image">
-          <img src="assets/dist/img/fun-pink-hair.jpg" alt="pink hair" title="pink hair">
-        </div>
         <div class="card-content">
           <h3 class="centered">BOOK your service TODAY!</h3>
-          <div class="divider"></div>
+          <div class="pink-divider"></div>
           <p>For more details in regards to booking a spa party or packages or to schedule an appointment, please call at (630) 499-8260 or e-mail at <a href="mailto:info@AllureSalonInAurora.com">info@AllureSalonInAurora.com»</a></p>
           <p class="centered">GIFT CERTIFICATES AVAILABLE IN STORE!</p>
+        </div>
+        <div class="card-image">
+          <img src="assets/dist/img/fun-pink-hair.jpg" alt="pink hair" title="pink hair">
         </div>
       </div>
     </div>
@@ -90,12 +90,12 @@
 
     <!-- NEWSLETTER SIGN UP -->
         <form>
-          FIRST NAME
-          <input type="text" name="first name">
-          LAST NAME
-          <input type="text" name="last name">
-          E-MAIL
-          <input type="email" name="e-mail">
+          <label for="name">FIRST NAME</label>
+          <input class="centered" type="text" name="first name">
+          <label for="name">LAST NAME</label>
+          <input class="centered" type="text" name="last name">
+          <label for="email">E-MAIL</label>
+          <input class="centered" type="email" name="e-mail">
           <input type="submit" value="Submit">
         </form>
       </div>
@@ -117,9 +117,8 @@
         <svg class="icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg>
         <svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg>
       </div>
+          <p class="copywrite">ALLURE SALON & SPA &#169; 2017 | DESIGNED BY CAITLIN JOHNSON DESIGNS</p>
     </footer>
-
-    <p class="copywrite">ALLURE SALON & SPA &#169; 2017 | DESIGNED BY CAITLIN JOHNSON DESIGNS</p>
 
     <script src="assets/dist/js/production.js" charset="utf-8"></script>
   </body>
