add styling to form in footer

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 
     <!-- NEWSLETTER SIGN UP -->
         <form>
-          <label for="name">FIRST NAME</label>
+          <label for="name" class="centered">FIRST NAME</label>
           <input class="centered" type="text" name="first name">
-          <label for="name">LAST NAME</label>
+          <label for="name" class="centered">LAST NAME</label>
           <input class="centered" type="text" name="last name">
-          <label for="email">E-MAIL</label>
+          <label for="email" class="centered">E-MAIL</label>
           <input class="centered" type="email" name="e-mail">
           <input type="submit" value="Submit">
         </form>
