add headings mixin

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         <li><a href="#">Our Blog</a></li>
       </ul>
     </nav>
-    <h1 id="homepage-heading">Hello <span class="special-heading">Gorgeous</span></h1>
+
+    <div class="homepage-heading-wrapper">
+      <h1 id="homepage-heading">Hello <span class="special-heading">Gorgeous</span></h1>
+    </div>
 
     <!-- WELCOME -->
     <main>
@@ -129,7 +132,7 @@
           </div>
         </div>
       </div>
-          <p class="copywrite">ALLURE SALON & SPA &#169; 2017 | DESIGNED BY CAITLIN JOHNSON DESIGNS</p>
+          <p class="copywrite centered">ALLURE SALON & SPA &#169; 2017 | DESIGNED BY CAITLIN JOHNSON DESIGNS</p>
     </footer>
 
     <script src="assets/dist/js/production.js" charset="utf-8"></script>
