--- a/spa-services.html
+++ b/spa-services.html
@@ -28,10 +28,10 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <img class="background" src="assets/dist/img/spa-services-bg.jpeg" alt="spa services" title="spa services">
+    <!--<img class="background" src="assets/dist/img/spa-services-bg.jpeg" alt="spa services" title="spa services">-->
 
     <!-- NAVIGATION -->
-    <nav>
+    <nav class="pages-nav centered">
       <a href="#"><img src="assets/dist/img/allure-alt-logo-pink.png" alt="Allure Salon & Spa" title="Allure Salon & Spa"></a>
       <ul>
         <li><a href="#">Salon Services</a></li>
@@ -126,6 +126,9 @@
     </footer>
 
 
-    <script src="assets/dist/js/app.js" charset="utf-8"></script>
+    <script src="assets/dist/js/production.js" charset="utf-8"></script>
+    <script>
+      $.backstretch("assets/dist/img/spa-services-bg.jpeg");
+    </script>
   </body>
 </html>
