correct and downsize main image on homepage

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </svg>
 
     <!-- BACKGROUND IMAGE -->
-    <img class="background" src="assets/dist/img/red-hair-bg.png" alt="hello gorgeous" title="hello gorgeous">
+    <img class="background background" src="assets/dist/img/red-hair-bg.jpg" alt="hello gorgeous" title="hello gorgeous">
 
     <!-- NAVIGATION -->
     <nav class="home-nav">
