place "hello" in front of "gorgeous" on homepage

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
 
     <div class="homepage-heading-wrapper">
-      <h1 id="homepage-heading">Hello <span class="special-heading">Gorgeous</span></h1>
+      <h1 id="homepage-heading"><span class="homepage-heading_hello">Hello</span> <span class="special-heading">Gorgeous</span></h1>
     </div>
 
     <!-- WELCOME -->
